# ATOMX

./: README.md
backend/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
backend/programs/swap-router/: Cargo.toml  README.md
backend/programs/swap-router/src/: router.rs  utils.rs
backend/programs/vault/: Cargo.toml
backend/programs/vault/src/: events.rs  vault.rs
backend/scanner/: Procfile  package.json  scanner.ts
backend/scanner/api/: config.ts  index.ts  logStreamer.ts  package.json  scanner.ts  types.ts
backend/scanner/src/: index.ts
backend/tests/: router.test.ts  vault-simple.test.ts  vault.test.ts
frontend/: .env.example  README.md  next.config.ts  package.json
frontend/AtomX-backend/: Anchor.toml  CLAUDE.md
frontend/AtomX-backend/scanner/: README.md  config.ts  index.ts  mockService.ts
frontend/AtomX-backend/scripts/: deploy-router.js  initialize.js  setup.sh
frontend/AtomX-frontend/: .env.example  package-lock.json
frontend/AtomX-frontend/app/: layout.tsx  page.tsx
frontend/AtomX-frontend/components/: ArbitrageCard.tsx  Navbar.tsx  StakingMetrics.tsx
frontend/AtomX-frontend/contexts/: WalletContext.tsx
frontend/AtomX-frontend/hooks/: useArbitrage.ts  useJupiterPrice.ts  useStakingData.ts
frontend/AtomX-frontend/lib/: constants.ts  (+8 more)
frontend/app/: globals.css
frontend/components/: MatrixRain.tsx  SwapCube.tsx
frontend/hooks/: usePhantomWallet.ts  useScanner.ts  useVault.ts
frontend/lib/: constants.ts  execution.ts  jupiter.ts  jupiterUltra.ts  scanner-api.ts  utils.ts  vault-transactions.ts  vault.ts
(+28 files in other folders)
